add label for orderDate

--- a/VendorAndOrderTracker/Views/Orders/New.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/New.cshtml
@@ -8,6 +8,7 @@
   <input id="orderDescription" name="orderDescription" maxlength="30" type="text" required>
   <label for="orderPrice">Order Price:</label>
   <input id="orderPrice" name="orderPrice" type="number" min="0" required>
-  <button type='submit'>Add order</button>
+  <label for="orderDate">Order Date:</label>
   <input id="orderDate" name="orderDate" type="text" maxlength="14" required>
+  <button type='submit'>Add order</button>
 </form>
