--- a/VendorAndOrderTracker/Views/Home/Index.cshtml
+++ b/VendorAndOrderTracker/Views/Home/Index.cshtml
@@ -1,4 +1,10 @@
+@{
+  Layout = "_Layout";
+}
 <h1>Welcome Pierre!</h1>
 <h2>This is your vendor and order tracker.</h2>
-<h3><a href='/vendors'>View vendors</a></h3>
-<h3><a href='/vendors/new'>Add a new vendor</a></h3>
+
+<div class="links">
+  <h4><a href='/vendors'>View vendors</a></h3>
+  <h4><a href='/vendors/new'>Add a new vendor</a></h3>
+</div>
